[project]
name = "pybkit"
version = "0.1.0"
description = "Library for performing atomic physics calculations and simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "sympy",
    "qutip",
    "multiprocess",
    "tqdm",
    "ipykernel",
    "ipympl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pybkit"]